                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 22-01-2006 added: Ability to set default settings for all movies from the video OSD.
 - 22-01-2006 changed: Removed some unused/rarely used settings.
 - 21-01-2006 added: xored trainer engine! thanks to team xored and to britneyspair for skinwork!
 - 21-01-2006 fixed/changed: tuned the subtitle caching a bit. should avoid most issues with rarred subs.
 - 21-01-2006 added: adplug codec to paplayer. add .adplug to the end of the filename of the file you want to play.
 - 21-01-2006 fixed: toggling subtitle with remote didn't affect setting in video osd.
 - 21-01-2006 fixed: unnecessary reloading of the same picture if the slide show consisted of only one picture and next/previous picture was requested.
 - 21-01-2006 added: new builtin command, xbmc.extract(rar/zip file). IMPORTANT: requires absolute paths. thanks to darkdonno459.
 - 21-01-2006 updated: Swedish language file (Thnx to blittan)
 - 21-01-2006 updated: Norwegian language file (Thnx to vnm)
 - 21-01-2006 updated: German language file (Thnx to sCAPe)
 - 21-01-2006 updated: Chinese (Simple) language file (Thnx to walter)
 - 21-01-2006 fixed: My Video 'Query Info For All Files'
 - 20-01-2006 fixed: [ 1410413 ] checking getcurrentlyplaying while strm a top500 kills audio
 - 19-01-2006 changed: No other thread messages could be processed if a dialog thread message was in process.
 - 19-01-2006 added: Skinnable LCD.  See lcd.xml in the system folder.
 - 19-01-2006 fixed:  Volume in credits should be obeyed by player now.
 - 19-01-2006 fixed: crash on very large labels in a skin like in PDM
 - 19-01-2006 changed: moved GetDirectory to media window base class